# aa-award-search

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  api.py  classes.py  config.py  date_range.py  flights.py  httpx_utils.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
classes/: __init__.py  flights.py  queries.py
