[project]
requires-python = ">=3.13"

[tool.basedpyright]
reportAny = false
reportPrivateUsage = false
reportUnusedCallResult = false

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
