[project]
requires-python = ">=3.13"

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportPrivateUsage = false
reportUnannotatedClassAttribute = false
reportUnusedCallResult = false
reportUnusedParameter = false

[tool.mypy]
enable_error_code = [
    "deprecated",
    "exhaustive-match",
    "explicit-override",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "unimported-reveal",
    "unused-awaitable",
]
strict = true
warn_unreachable = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TID",   # flake8-tidy-imports
    "TD",    # flake8-todos
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "FLY",   # flynt
    "I",     # isort
    "N",     # pep8-naming
    "PERF",  # Perflint
    "E",     # pycodestyle
    "W",     # pycodestyle
    "F",     # Pyflakes
    "PGH",   # pygrep-hooks
    "PL",    # Pylint
    "UP",    # pyupgrade
    "FURB",  # refurb
    "RUF",   # Ruff-specific rules
    "TRY",   # tryceratops
]
ignore = [
    "ANN401",  # any-type
    "E501",    # line-too-long
    "N806",    # non-lowercase-variable-in-function
    "PLE1205", # logging-too-many-args
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0915", # too-many-statements
    "PLR2004", # magic-value-comparison
    "PLW0603", # global-statement
    "RUF200",  # invalid-pyproject-toml
    "S101",    # assert
    "S311",    # suspicious-non-cryptographic-random-usage
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TD004",   # missing-todo-colon
    "TD005",   # missing-todo-description
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
# TODO(https://github.com/astral-sh/ruff/issues/9006): Unset this if the default changes
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # TODO(Ruff 2026): Remove when https://github.com/astral-sh/ruff/pull/18400 is promoted to stable
    "PLC0414", # useless-import-alias
]
